# chatwoot-desktop

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
openspec/changes/archive/2026-05-02-chatwoot-desktop-client/: design.md  tasks.md
openspec/changes/archive/2026-05-02-chatwoot-desktop-client/specs/settings-ui/: spec.md
openspec/changes/chatwoot-desktop-client/: proposal.md
openspec/changes/toggle-notifications/: design.md  proposal.md  tasks.md
openspec/changes/toggle-notifications/specs/notifications/: spec.md
openspec/changes/toggle-notifications/specs/settings-ui/: spec.md
openspec/specs/app-shell/: spec.md
openspec/specs/notifications/: spec.md
openspec/specs/webview-manager/: spec.md
openspec/specs/workspace-config/: spec.md
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  remote.json
src-tauri/icons/: icon.icns
src-tauri/src/: badge.rs  config.rs  lib.rs  main.rs  menu.rs  notifications.rs  tray.rs  webview.rs  window.rs
src/css/: main.css
src/js/: api.js  app.js  badge-bridge.js  error.js  notification-bridge.js  router.js  settings.js  setup.js  validate-url.js
