[package]
name = "chatwoot-desktop"
version = "1.0.1"
description = "Chatwoot Desktop Client for macOS"
authors = []
edition = "2021"
default-run = "chatwoot-desktop"
rust-version = "1.77.2"

[[bin]]
name = "chatwoot-desktop"
path = "src/main.rs"

[lib]
name = "chatwoot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
